--- a/Hero Designer/Hero Designer.csproj
+++ b/Hero Designer/Hero Designer.csproj
@@ -233,10 +233,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="midsControls, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\midsControls.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net35\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -626,6 +622,10 @@
     <ProjectReference Include="..\Base\Base.csproj">
       <Project>{78125ad1-c9f8-4fe9-9bdb-5033d5fa76cc}</Project>
       <Name>Base</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\midsControls\midsControls.csproj">
+      <Project>{8b762616-ca1e-428a-a62d-e17dd738712d}</Project>
+      <Name>midsControls</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
