fix local compilation issue

--- a/HeroDesigner.ZLib/HeroDesigner.ZLib.fsproj
+++ b/HeroDesigner.ZLib/HeroDesigner.ZLib.fsproj
@@ -65,7 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
-      <HintPath>..\Hero Designer\packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
+      <HintPath>..\packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="System" />
