--- a/Hero Designer/Hero Designer.csproj
+++ b/Hero Designer/Hero Designer.csproj
@@ -142,7 +142,7 @@
     <Compile Include="Forms\frmRecipeViewer.Designer.cs">
       <DependentUpon>frmRecipeViewer.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmRecipeEdit.Designer.cs">
+    <Compile Include="Forms\OptionsMenuItems\DbEditor\frmRecipeEdit.Designer.cs">
       <DependentUpon>frmRecipeEdit.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\frmReadme.Designer.cs">
@@ -169,43 +169,43 @@
     <Compile Include="Forms\frmIncarnate.Designer.cs">
       <DependentUpon>frmIncarnate.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImport_SetBonusAssignment.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_SetBonusAssignment.Designer.cs">
       <DependentUpon>frmImport_SetBonusAssignment.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImport_SetAssignments.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_SetAssignments.Designer.cs">
       <DependentUpon>frmImport_SetAssignments.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImport_SalvageReq.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_SalvageReq.Designer.cs">
       <DependentUpon>frmImport_SalvageReq.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImport_Recipe.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_Recipe.Designer.cs">
       <DependentUpon>frmImport_Recipe.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImport_Powerset.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_Powerset.Designer.cs">
       <DependentUpon>frmImport_Powerset.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImport_Power.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_Power.Designer.cs">
       <DependentUpon>frmImport_Power.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImport_mod.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_mod.Designer.cs">
       <DependentUpon>frmImport_mod.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImport_Entities.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_Entities.Designer.cs">
       <DependentUpon>frmImport_Entities.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImport_EnhancementEffects.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_EnhancementEffects.Designer.cs">
       <DependentUpon>frmImport_EnhancementEffects.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImport_Archetype.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_Archetype.Designer.cs">
       <DependentUpon>frmImport_Archetype.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImportPowerLevels.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImportPowerLevels.Designer.cs">
       <DependentUpon>frmImportPowerLevels.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImportEnhSets.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImportEnhSets.Designer.cs">
       <DependentUpon>frmImportEnhSets.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmImportEffects.Designer.cs">
+    <Compile Include="Forms\ImportExportItems\frmImportEffects.Designer.cs">
       <DependentUpon>frmImportEffects.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\frmFloatingStats.Designer.cs">
@@ -315,43 +315,43 @@
     <Compile Include="Forms\ImportExportItems\frmForum.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImportEffects.cs">
+    <Compile Include="Forms\ImportExportItems\frmImportEffects.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImportEnhSets.cs">
+    <Compile Include="Forms\ImportExportItems\frmImportEnhSets.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImportPowerLevels.cs">
+    <Compile Include="Forms\ImportExportItems\frmImportPowerLevels.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImport_Archetype.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_Archetype.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImport_EnhancementEffects.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_EnhancementEffects.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImport_Entities.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_Entities.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImport_mod.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_mod.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImport_Power.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_Power.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImport_Powerset.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_Powerset.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImport_Recipe.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_Recipe.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImport_SalvageReq.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_SalvageReq.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImport_SetAssignments.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_SetAssignments.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmImport_SetBonusAssignment.cs">
+    <Compile Include="Forms\ImportExportItems\frmImport_SetBonusAssignment.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\frmIncarnate.cs">
@@ -384,7 +384,7 @@
     <Compile Include="Forms\frmReadme.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmRecipeEdit.cs">
+    <Compile Include="Forms\OptionsMenuItems\DbEditor\frmRecipeEdit.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\frmRecipeViewer.cs">
@@ -489,43 +489,43 @@
     <EmbeddedResource Include="Forms\ImportExportItems\frmForum.resx">
       <DependentUpon>frmForum.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImport_Archetype.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImport_Archetype.resx">
       <DependentUpon>frmImport_Archetype.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImport_EnhancementEffects.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImport_EnhancementEffects.resx">
       <DependentUpon>frmImport_EnhancementEffects.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImport_Entities.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImport_Entities.resx">
       <DependentUpon>frmImport_Entities.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImport_mod.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImport_mod.resx">
       <DependentUpon>frmImport_mod.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImport_Power.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImport_Power.resx">
       <DependentUpon>frmImport_Power.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImport_Powerset.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImport_Powerset.resx">
       <DependentUpon>frmImport_Powerset.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImport_Recipe.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImport_Recipe.resx">
       <DependentUpon>frmImport_Recipe.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImport_SalvageReq.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImport_SalvageReq.resx">
       <DependentUpon>frmImport_SalvageReq.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImport_SetAssignments.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImport_SetAssignments.resx">
       <DependentUpon>frmImport_SetAssignments.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImport_SetBonusAssignment.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImport_SetBonusAssignment.resx">
       <DependentUpon>frmImport_SetBonusAssignment.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImportEffects.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImportEffects.resx">
       <DependentUpon>frmImportEffects.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImportEnhSets.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImportEnhSets.resx">
       <DependentUpon>frmImportEnhSets.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmImportPowerLevels.resx">
+    <EmbeddedResource Include="Forms\ImportExportItems\frmImportPowerLevels.resx">
       <DependentUpon>frmImportPowerLevels.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmIncarnate.resx">
@@ -558,7 +558,7 @@
     <EmbeddedResource Include="Forms\frmReadme.resx">
       <DependentUpon>frmReadme.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmRecipeEdit.resx">
+    <EmbeddedResource Include="Forms\OptionsMenuItems\DbEditor\frmRecipeEdit.resx">
       <DependentUpon>frmRecipeEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmRecipeViewer.resx">
