--- a/HeroDesigner.Installer/HeroDesigner.Installer.fsproj
+++ b/HeroDesigner.Installer/HeroDesigner.Installer.fsproj
@@ -51,6 +51,7 @@
     <None Include="App.config" />
     <Content Include="packages.config" />
     <EmbeddedResource Include="Main.xaml" />
+    <EmbeddedResource Include="Gradient.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Elmish">
@@ -71,6 +72,7 @@
     <Reference Include="System.ValueTuple">
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
