--- a/HeroDesigner.Installer/packages.config
+++ b/HeroDesigner.Installer/packages.config
@@ -3,6 +3,7 @@
   <package id="Elmish" version="3.0.3" targetFramework="net472" />
   <package id="Elmish.WPF" version="3.1.0" targetFramework="net472" />
   <package id="FSharp.Core" version="4.6.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="SharpZipLib" version="1.1.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
 </packages>
