--- a/HeroDesigner.Installer/HeroDesigner.Installer.fsproj
+++ b/HeroDesigner.Installer/HeroDesigner.Installer.fsproj
@@ -47,6 +47,8 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Helpers.fs" />
+    <Compile Include="Metafile.fs" />
     <Compile Include="Compression.fs" />
     <Compile Include="HeroPackaging.fs" />
     <Compile Include="Program.fs" />
@@ -69,6 +71,9 @@
       <HintPath>..\packages\SharpZipLib.1.1.0\lib\net45\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
