add more diagnostics around failed file extraction

--- a/HeroDesigner.Installer/HeroDesigner.Installer.fsproj
+++ b/HeroDesigner.Installer/HeroDesigner.Installer.fsproj
@@ -35,7 +35,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\$(Configuration)\$(AssemblyName).XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
