--- a/Hero Designer/Data/Config.json
+++ b/Hero Designer/Data/Config.json
@@ -31,16 +31,16 @@
     "RTFBase": 20,
     "ColorBackgroundHero": "0, 0, 32",
     "ColorBackgroundVillain": "32, 0, 0",
-    "ColorEnhancement": "0, 255, 0",
-    "ColorFaded": "192, 192, 192",
-    "ColorInvention": "0, 255, 255",
-    "ColorInventionInv": "0, 0, 128",
-    "ColorText": "255, 255, 255",
-    "ColorWarning": "255, 0, 0",
+    "ColorEnhancement": "Lime",
+    "ColorFaded": "Silver",
+    "ColorInvention": "Cyan",
+    "ColorInventionInv": "Navy",
+    "ColorText": "White",
+    "ColorWarning": "Red",
     "ColorPlName": "192, 192, 255",
     "ColorPlSpecial": "128, 128, 255",
-    "ColorPowerAvailable": "255, 255, 0",
-    "ColorPowerTaken": "0, 255, 0",
+    "ColorPowerAvailable": "Yellow",
+    "ColorPowerTaken": "Lime",
     "ColorPowerTakenDark": "0, 192, 0",
     "ColorPowerDisabled": "128, 128, 192",
     "ColorPowerHighlight": "64, 64, 96"
@@ -82,13 +82,12 @@
     0
   ],
   "DefaultSaveFolder": "",
+  "BuildMode": 1,
   "BuildOption": 2,
   "UpdatePath": "http://repo.cohtitan.com/mids_updates/",
   "ShowAlphaPopup": true,
-  "PopupRecipes": true,
   "ShoppingListIncludesRecipes": true,
   "PrintProfile": 16843009,
-  "PrintHistory": true,
   "LastPrinter": "\u0001",
   "PrintProfileEnh": true,
   "DesaturateInherent": true,
@@ -123,14 +122,14 @@
     "ColorSchemes": [
       {
         "SchemeName": "Navy",
-        "Title": "0, 0, 205",
-        "Heading": "0, 0, 128",
-        "Level": "72, 61, 139",
-        "Slots": "72, 61, 139",
-        "Power": "0, 0, 0",
-        "IOColor": "0, 0, 205",
-        "SetColor": "0, 0, 205",
-        "HOColor": "72, 61, 139"
+        "Title": "MediumBlue",
+        "Heading": "Navy",
+        "Level": "DarkSlateBlue",
+        "Slots": "DarkSlateBlue",
+        "Power": "Black",
+        "IOColor": "MediumBlue",
+        "SetColor": "MediumBlue",
+        "HOColor": "DarkSlateBlue"
       },
       {
         "SchemeName": "Light Blue (US)",
@@ -145,14 +144,14 @@
       },
       {
         "SchemeName": "Purple",
-        "Title": "128, 0, 128",
-        "Heading": "148, 0, 211",
-        "Level": "186, 85, 211",
-        "Slots": "148, 0, 211",
-        "Power": "0, 0, 0",
-        "IOColor": "128, 0, 128",
-        "SetColor": "128, 0, 128",
-        "HOColor": "148, 0, 211"
+        "Title": "Purple",
+        "Heading": "DarkViolet",
+        "Level": "MediumOrchid",
+        "Slots": "DarkViolet",
+        "Power": "Black",
+        "IOColor": "Purple",
+        "SetColor": "Purple",
+        "HOColor": "DarkViolet"
       },
       {
         "SchemeName": "Purple (US)",
@@ -167,33 +166,33 @@
       },
       {
         "SchemeName": "Orange",
-        "Title": "255, 140, 0",
-        "Heading": "255, 165, 0",
-        "Level": "255, 69, 0",
-        "Slots": "184, 134, 11",
-        "Power": "0, 0, 0",
-        "IOColor": "255, 140, 0",
-        "SetColor": "255, 140, 0",
-        "HOColor": "184, 134, 11"
+        "Title": "DarkOrange",
+        "Heading": "Orange",
+        "Level": "OrangeRed",
+        "Slots": "DarkGoldenrod",
+        "Power": "Black",
+        "IOColor": "DarkOrange",
+        "SetColor": "DarkOrange",
+        "HOColor": "DarkGoldenrod"
       },
       {
         "SchemeName": "Olive Drab",
-        "Title": "85, 107, 47",
-        "Heading": "0, 128, 0",
-        "Level": "107, 142, 35",
-        "Slots": "107, 142, 35",
-        "Power": "0, 0, 0",
-        "IOColor": "85, 107, 47",
-        "SetColor": "85, 107, 47",
-        "HOColor": "107, 142, 35"
+        "Title": "DarkOliveGreen",
+        "Heading": "Green",
+        "Level": "OliveDrab",
+        "Slots": "OliveDrab",
+        "Power": "Black",
+        "IOColor": "DarkOliveGreen",
+        "SetColor": "DarkOliveGreen",
+        "HOColor": "OliveDrab"
       },
       {
         "SchemeName": "Reds",
-        "Title": "128, 0, 0",
+        "Title": "Maroon",
         "Heading": "168, 0, 0",
         "Level": "132, 63, 60",
         "Slots": "111, 0, 0",
-        "Power": "0, 0, 0",
+        "Power": "Black",
         "IOColor": "155, 0, 0",
         "SetColor": "130, 0, 0",
         "HOColor": "147, 22, 0"
@@ -201,7 +200,7 @@
       {
         "SchemeName": "Reds (US)",
         "Title": "255, 106, 106",
-        "Heading": "255, 0, 0",
+        "Heading": "Red",
         "Level": "255, 108, 108",
         "Slots": "255, 128, 128",
         "Power": "255, 183, 183",
@@ -211,11 +210,11 @@
       },
       {
         "SchemeName": "Fruit Salad (US)",
-        "Title": "255, 165, 0",
-        "Heading": "30, 144, 255",
-        "Level": "50, 205, 50",
-        "Slots": "255, 215, 0",
-        "Power": "30, 144, 255",
+        "Title": "Orange",
+        "Heading": "DodgerBlue",
+        "Level": "LimeGreen",
+        "Slots": "Gold",
+        "Power": "DodgerBlue",
         "IOColor": "255, 192, 0",
         "SetColor": "255, 230, 0",
         "HOColor": "255, 195, 75"
