--- a/Hero Designer/packages.config
+++ b/Hero Designer/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="Nancy" version="2.0.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net35-client" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
