--- a/Base/packages.config
+++ b/Base/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net40" />
+  <package id="LinqBridge" version="1.3.0" targetFramework="net20" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net40" requireReinstallation="true" />
 </packages>
