--- a/Hero Designer/packages.config
+++ b/Hero Designer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net35-client" />
+  <package id="LinqBridge" version="1.3.0" targetFramework="net20" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net20" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net40" />
 </packages>
