cleaning and refactoring

--- a/Base/Base.csproj
+++ b/Base/Base.csproj
@@ -72,7 +72,6 @@
     <Compile Include="I9Slot.cs" />
     <Compile Include="I9SetData.cs" />
     <Compile Include="I9Gfx.cs" />
-    <Compile Include="HistoryMap.cs" />
     <Compile Include="Files.cs" />
     <Compile Include="FileIO.cs" />
     <Compile Include="ExportConfig.cs" />
@@ -111,6 +110,12 @@
     <EmbeddedResource Include="ZStatus.resx">
       <DependentUpon>ZStatus.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HeroDesigner.Schema\HeroDesigner.Schema.fsproj">
+      <Project>{7b1c2fff-0399-4a7a-82ef-126660356121}</Project>
+      <Name>HeroDesigner.Schema</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
