--- a/Hero Designer/packages.config
+++ b/Hero Designer/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autoupdater.NET.Official" version="1.5.4" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net35-client" />
 </packages>
